Atualizar index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Olá, Mundo!</h1>
-    <p>Bem-vindo ao seu primeiro projeto web!!</p>
+    <p>Bem-vindo ao seu primeiro projeto web!</p>
 </body>
 </html>
